--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,19 @@ body {
     font-family: 'Open Sans', sans-serif;
     scroll-behavior: smooth;
 }
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 1s ease forwards;
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 
 .vividus-header-slider h1,
 .vividus-header-main .navbar-brand,
@@ -37,12 +50,11 @@ h2 {
 .dropdown-item {
     font-size: 16px;
     font-weight: 600;
-    padding: 10px;
-    border-bottom: 1px solid #eeeeee;
+    padding: 10px 25px;
 }
 
 .dropdown-item:hover {
-    background: linear-gradient(#0B2B59, #28548E);
+    background: linear-gradient(120deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 100%, rgba(237, 221, 83, 1) 100%);
     color: #fff;
 }
 
@@ -348,10 +360,7 @@ h2 {
     left: 0;
     width: 100%;
     height: 0;
-    background:
-        linear-gradient(rgba(17, 107, 95, 0.8), rgba(17, 107, 95, 0.8)),
-        /* darker green, semi-transparent */
-        url('../img/grid-card.webp') center/cover no-repeat;
+    background: linear-gradient(rgba(17, 107, 95, 0.8), rgba(17, 107, 95, 0.8)), url('../img/grid-card.webp') center/cover no-repeat;
     transition: height 0.3s ease;
     z-index: 1;
 }
@@ -473,7 +482,6 @@ h2 {
         linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 69, 81, 0.8) 100%),
         url('../img/img19.jpg') center center / cover no-repeat fixed;
     padding: 60px 0;
-    border-radius: 10px;
     position: relative;
 }
 
@@ -1377,7 +1385,7 @@ h2 {
 .about-achievements-title {
     font-size: 38px;
     font-weight: 800;
-    background: linear-gradient(113deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 100%, rgba(237, 221, 83, 1) 100%);
+    background: linear-gradient(rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 100%, rgba(237, 221, 83, 1) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: start;
