--- a/css/index.css
+++ b/css/index.css
@@ -336,7 +336,7 @@ h2 {
 
 @media (min-width: 992px) {
   .vividus-footer-main .row {
-    align-items: center;
+    align-items: start !important;
   }
 }
 
@@ -604,7 +604,7 @@ h2 {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  margin: 0 auto 10px auto;
+  /* margin: 0 auto 10px auto; */
 }
 
 .vividus-aboutus-button {
@@ -1236,7 +1236,7 @@ h2 {
 .about-whatwe-image {
   border-radius: 12px;
   width: 100%;
-  height: 300px;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -1282,8 +1282,11 @@ h2 {
 }
 
 .about-whatwe-contentset {
-  padding: 20px;
-  margin-top: 15px;
+  padding: 10px;
+  margin-top: 0px;
+}
+.core-values {
+  font-weight: 600; /* or try 400 for a normal look */
 }
 
 /* 🔁 Responsive Tweaks */
