--- a/css/index.css
+++ b/css/index.css
@@ -218,6 +218,7 @@ h2 {
   background-color: #f5f5f5;
   color: #333;
   font-size: 14px;
+  padding: 30px 50px 10px 50px;
 }
 
 .vividus-footer-main h5 {
@@ -343,6 +344,9 @@ h2 {
 /* ============================
    🔹 Our Services Section
 =============================== */
+.vividus-services-container{
+  padding: 50px;
+}
 .vividus-services-card {
   position: relative;
   background-color: #fff;
@@ -519,7 +523,7 @@ h2 {
       rgba(0, 69, 81, 0.8) 100%
     ),
     url("../img/img19.jpg") center center / cover no-repeat fixed;
-  padding: 60px 0;
+  padding: 50px;
   position: relative;
 }
 
@@ -562,6 +566,7 @@ h2 {
 /* <!-- About us section code css --> */
 .vividus-aboutus-section {
   background-color: #fff;
+  padding: 50px;
 }
 
 .vividus-aboutus-maintitle {
@@ -653,6 +658,7 @@ h2 {
   height: auto;
   display: flex;
   align-items: center;
+  padding: 50px;
 }
 
 .vividus-homecount-subtitle {
@@ -845,6 +851,7 @@ h2 {
 /* faqs section css  */
 .vividus-faqs-section {
   background-color: #fdfdfd;
+  padding: 50px;
 }
 
 .vividus-faqs-subtitle {
@@ -912,6 +919,9 @@ h2 {
 }
 
 /* orthopedic section css  */
+.vividu-orthopedic-container{
+  padding: 50px;
+}
 .vividu-orthopedic-title {
   font-weight: bolder;
   font-size: 32px;
@@ -1048,7 +1058,7 @@ h2 {
 /* cardic section css  */
 .cardiac-vividus-container {
   background-color: #f8f9fa;
-  padding: 20px;
+  padding: 50px;
   border-radius: 12px;
 }
 
@@ -1086,11 +1096,18 @@ h2 {
 }
 
 .cardiac-vividus-title {
-  font-size: 24px;
+  font-size: 14px;
   font-weight: 700;
   color: #c82817;
-  margin-bottom: 10px;
 }
+
+.product-logo {
+  max-width: 300px;
+  height: auto;
+  display: block;
+  margin: 0 auto; 
+}
+
 
 .cardiac-vividus-card ul li {
   font-size: 14px;
@@ -1149,6 +1166,9 @@ h2 {
 }
 
 /* ent section css  */
+.vividu-ent-container{
+  padding: 50px;
+}
 .vividu-ent-header h2 {
   font-size: 38px;
   font-weight: 800;
@@ -1230,7 +1250,7 @@ h2 {
 
 /* about page section css  */
 .about-whatwe-section {
-  padding: 60px 0;
+  padding: 50px;
 }
 
 .about-whatwe-image {
@@ -1339,7 +1359,7 @@ h2 {
 /* about why choose us css  */
 /* Main Section */
 .about-whychooseus-main {
-  padding: 60px 0;
+  padding: 50px;
   background-color: #f7f7f7;
 }
 
@@ -1464,6 +1484,9 @@ h2 {
 }
 
 /* our achievements section css  */
+.about-achievements-section{
+  padding: 50px;
+}
 .about-achievements-title {
   font-size: 38px;
   font-weight: 800;
@@ -1547,6 +1570,12 @@ h2 {
 }
 
 /* careers page css  */
+.vividus-careers-section-container{
+  padding: 50px;
+}
+.vividus-careers-values{
+padding: 50px;
+}
 .vividus-careers-banner h1 {
   font-weight: bold;
 }
@@ -1568,7 +1597,7 @@ h2 {
 }
 .vividus-careers-form-section {
   background: #f4f9f6;
-  margin-top: 50px;
+  padding: 50px;
 }
 .vividus-careers-btn {
   background-color: #007bff;
@@ -1657,12 +1686,17 @@ h2 {
 }
 
 /* R&D page css  */
+.vividus-rnd-areas{
+  padding: 50px;
+}
 .vividus-rnd-hero {
   background-color: #004080;
   color: #fff;
   padding: 100px 0;
 }
-
+.vividus-rnd-about{
+  padding: 50px;
+}
 .vividus-rnd-about ul li {
   margin-bottom: 10px;
   font-size: 1.1rem;
@@ -1678,6 +1712,7 @@ h2 {
 
 .vividus-rnd-innovation {
   background-color: #f8f9fa;
+  padding: 50px;
 }
 .vividus-rnd-img {
   height: 400px;
@@ -1688,6 +1723,7 @@ h2 {
 
 .vividus-collaboration-rnd-cap {
   background-color: #ffffff;
+  padding: 50px;
 }
 
 .vividus-collaboration-rnd-cap .row {
@@ -1726,6 +1762,7 @@ h2 {
 
 .vividus-collaboration-rnd-global {
   background-color: #f8f9fa;
+  padding: 50px;
 }
 
 .vividus-collaboration-rnd-global .row {
@@ -1778,6 +1815,7 @@ h2 {
 
 .vividus-collaboration-rnd-milestone {
   background-color: #ffffff;
+  padding: 50px;
 }
 
 .rnd-milestone-card {
@@ -1900,3 +1938,4 @@ h2 {
     padding: 6px;
   }
 }
+
