--- a/css/index.css
+++ b/css/index.css
@@ -928,236 +928,6 @@ h2 {
   }
 }
 
-/* faqs section css  */
-.vividus-faqs-section {
-  background-color: #fdfdfd;
-  padding: 50px;
-}
-
-.vividus-faqs-subtitle {
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 14px;
-  color: #555;
-}
-
-.vividus-faqs-title {
-  font-size: 38px;
-  font-weight: 800;
-  background: linear-gradient(rgba(42, 123, 155, 1) 0%,
-      rgba(87, 199, 133, 1) 100%,
-      rgba(237, 221, 83, 1) 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.vividus-faqs-accordion .card {
-  border: none;
-  border-radius: 0;
-  margin-bottom: 10px;
-  transition: background-color 0.3s;
-}
-
-.vividus-faqs-header {
-  padding: 1rem 1.5rem;
-  cursor: pointer;
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  transition: background-color 0.3s ease;
-}
-
-.vividus-faqs-header:hover {
-  background-color: #e8f0fe;
-}
-
-.vividus-faqs-header.active {
-  background-color: #f0f8ff;
-  border-bottom: none;
-}
-
-.vividus-faqs-body {
-  background-color: #f0f8ff;
-  padding: 1rem 1.5rem;
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-}
-
-.faq-icon i {
-  font-size: 14px;
-  transition: transform 0.3s ease;
-  color: #000;
-}
-
-.faq-icon.rotate i {
-  transform: rotate(180deg);
-}
-
-/* orthopedic section css  */
-.vividu-orthopedic-container {
-  padding: 50px;
-}
-
-.vividu-orthopedic-title {
-  font-weight: bolder;
-  font-size: 32px;
-  margin-bottom: 10px;
-  color: #333;
-  text-align: center;
-}
-
-.vividu-orthopedic-text {
-  font-size: 14px;
-  line-height: 1.6;
-  margin-bottom: 15px;
-  text-align: center;
-  font-weight: 600;
-}
-
-.vividu-orthopedic-header h2 {
-  font-size: 38px;
-  font-weight: bolder;
-  background: linear-gradient(rgba(42, 123, 155, 1) 0%,
-      rgba(87, 199, 133, 1) 100%,
-      rgba(237, 221, 83, 1) 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.vividu-orthopedic-card {
-  background: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  height: 100%;
-  position: relative;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.15);
-  /* stronger shadow */
-  border: 2px solid #9e9b9b;
-  transition: transform 0.3s;
-}
-
-.vividu-orthopedic-card:hover {
-  transform: translateY(-5px);
-}
-
-.vividu-orthopedic-red,
-.vividu-orthopedic-orange,
-.vividu-orthopedic-green,
-.vividu-orthopedic-blue {
-  border-bottom-width: 20px;
-  border-radius: 25px;
-  background: #fffdfd;
-  display: grid;
-}
-
-.vividu-orthopedic-red {
-  border-bottom-color: #c82817;
-}
-
-.vividu-orthopedic-orange {
-  border-bottom-color: #3a1d03;
-}
-
-.vividu-orthopedic-green {
-  border-bottom-color: #0f7614;
-}
-
-.vividu-orthopedic-blue {
-  border-bottom-color: #08258d;
-}
-
-.vividu-orthopedic-both {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-}
-
-/* Tablet View - 768px to 991px */
-@media (max-width: 991px) and (min-width: 768px) {
-
-  .vividus-faqs-section,
-  .vividu-orthopedic-container {
-    padding: 20px;
-  }
-
-  .vividus-faqs-title,
-  .vividu-orthopedic-header h2 {
-    font-size: 30px;
-    text-align: center;
-  }
-
-  .vividus-faqs-subtitle,
-  .vividu-orthopedic-title {
-    font-size: 12px;
-    text-align: center;
-  }
-
-  .vivudu-orthopedic-text {
-    font-size: 13px;
-    line-height: 1.5;
-  }
-
-  .vividu-orthopedic-both {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-    gap: 10px;
-  }
-
-  .vivudu-orthopedic-card {
-    padding: 15px;
-  }
-}
-
-/* Mobile View - Below 767px */
-@media (max-width: 767px) {
-
-  .vividus-faqs-section,
-  .vividu-orthopedic-container {
-    padding: 20px 15px;
-  }
-
-  .vividus-faqs-title,
-  .vividu-orthopedic-header h2 {
-    font-size: 24px;
-    text-align: center;
-  }
-
-  .vividus-faqs-subtitle,
-  .vividu-orthopedic-title {
-    font-size: 12px;
-    text-align: center;
-  }
-
-  .vivudu-orthopedic-text {
-    font-size: 12px;
-    line-height: 1.4;
-    text-align: center;
-  }
-
-  .vivudu-orthopedic-both {
-    grid-template-columns: 1fr;
-    gap: 15px !important;
-  }
-
-  .vivudu-orthopedic-card {
-    padding: 15px;
-  }
-
-  .vividus-faqs-header {
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 10px;
-  }
-
-  .faq-icon i {
-    font-size: 12px;
-  }
-}
-
-
 /* cardic section css  */
 .cardiac-vividus-container {
   background-color: #f8f9fa;
@@ -1613,66 +1383,16 @@ h2 {
   }
 }
 
-/* our achievements section css  */
-.about-achievements-section {
-  padding: 50px;
-}
 
-.about-achievements-title {
-  font-size: 38px;
-  font-weight: 800;
-  background: linear-gradient(rgba(42, 123, 155, 1) 0%,
-      rgba(87, 199, 133, 1) 100%,
-      rgba(237, 221, 83, 1) 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-align: start;
-  margin-bottom: 20px;
-}
-
-.about-achievements-text {
-  color: #555;
-  font-size: 16px;
-}
-
-.about-achievements-arrows button {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  font-size: 18px;
-  transition: 0.3s;
-}
-
-.about-achievements-arrows button:hover {
-  background-color: #f0f0f0;
-  transform: scale(1.05);
-}
-
-/* logo styles  */
+/* vividus logo styles  */
 .VIVIDUS-Logo-img {
   width: 200px;
-  /* Keeps the aspect ratio */
   height: auto;
   display: block;
 }
 
 /* Tablet View - 768px to 991px */
 @media (max-width: 991px) and (min-width: 768px) {
-  .about-achievements-section {
-    padding: 30px;
-  }
-
-  .about-achievements-title {
-    font-size: 30px;
-    text-align: start;
-  }
-
-  .about-achievements-text {
-    font-size: 14px;
-    text-align: start;
-  }
-
-
   .VIVIDUS-Logo-img {
     width: 180px;
     margin: 0 auto;
@@ -1681,20 +1401,6 @@ h2 {
 
 /* Mobile View - Below 767px */
 @media (max-width: 767px) {
-  .about-achievements-section {
-    padding: 20px 15px;
-  }
-
-  .about-achievements-title {
-    font-size: 24px;
-    text-align: start;
-  }
-
-  .about-achievements-text {
-    font-size: 13px;
-    text-align: start;
-  }
-
   .VIVIDUS-Logo-img {
     width: 160px;
     margin: 0 auto;
